--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ body {
   /*background: rgba(200,200,200,1) !important;*/
   /*filter: invert(.7) !important; */
   /*overscroll-behavior: none; */
-  /*transition: all .15s ease !important;*/
+  /*transition: all .5s ease !important;*/
   /*background: #0e0e44 !important; */
 }
 .no_left {
@@ -28,7 +28,7 @@ body {
 .tag_select_class:hover {
     animation: fadein .25s !important;
     animation: fadeout .25s; 
-    transition: all .15s ease !important; 
+    transition: all .5s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     transform: scale(1.5) !important;
@@ -120,7 +120,7 @@ html {
 
 
 .tone_item {
-    transition: all .15s ease !important;
+    transition: all .5s ease !important;
 }
 
 .displaynone {
@@ -167,7 +167,7 @@ p {
   /*border-radius: 7px !important;*/
 }
 
-.user_online {
+.green_outline {
   border-style: solid !important;
   border-color: green !important;
   border-width: 3px !important;
@@ -241,7 +241,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  /*transition: height .15s linear;*/
+  /*transition: height .5s linear;*/
   /*border-radius: 7px !important;*/
 }
 
@@ -351,7 +351,7 @@ html.ios body {
 
 
 .tone_item {
-    /*transition: all .15s ease !important;*/
+    /*transition: all .5s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -400,12 +400,12 @@ a.goto_article {
 .say {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    transition: all .15s ease !important; 
+    transition: all .5s ease !important; 
 }
 .say:hover {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    /*transition: all .15s ease !important; */
+    /*transition: all .5s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.01) !important;*/
@@ -435,7 +435,7 @@ a.goto_article {
 
 .zoomer {
     /*animation: fadeout .25s; */
-    transition: all .15s ease !important; 
+    transition: all .25s ease !important; 
 
 }
 .zoomer:active {
@@ -465,7 +465,7 @@ img:active {
   transform: scale(.97) !important;
 }
 .zoomer:hover {
-    transition: all .15s ease !important; 
+    transition: all .5s ease !important; 
     text-shadow: 0 0 3px grey !important;
     filter: drop-shadow(0px 0px 3px white);    
     z-index: 1000 !important;
@@ -486,21 +486,21 @@ img:active {
 
 .superzoom {
     /*animation: fadeout .25s; */
-    transition: all .15s ease !important; 
+    transition: all .5s ease !important; 
     z-index:1000 !important;
 }
 .superzoom:active {
     transform: scale(1.5) !important;
 }
 .superzoom:hover {
-    transition: all .15s ease !important; 
+    transition: all .5s ease !important; 
     transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     border-radius: 7px !important;
     /*animation: fadein .25s !important;*/
-    /*-webkit-transition: opacity .15s ease-in !important;*/
-    /* -webkit-transition: opacity .15s ease-out; */
+    /*-webkit-transition: opacity .5s ease-in !important;*/
+    /* -webkit-transition: opacity .5s ease-out; */
     /*animation: fadeout .25s; */
     
 }
@@ -591,6 +591,7 @@ a.title, #title {
 .f12 {
   font-size: 120% !important;
   line-height: 150% !important;
+  color: black !important;
   /* margin-bottom: 7px !important;  */
 }
 .f11 {
@@ -745,7 +746,7 @@ input {
 }
 .button:active{
   border-radius: 7px !important;  
-   transition: all .15s !important; 
+   transition: all .5s !important; 
   transform: translate(0, 1px) !important; 
   /*zoom:105% !important;*/
   /*-webkit-transform: translate(0, 1px) !important;*/
@@ -763,7 +764,7 @@ input {
 .icon:not(.loading){
     animation: fadein .5s !important;
     transition: all .5s ease !important;
-    /* -webkit-transition: opacity .15s ease-out; */
+    /* -webkit-transition: opacity .5s ease-out; */
     animation: fadeout .5s; 
 }
 
@@ -783,7 +784,7 @@ input {
 }
 
 .ui.header{
-  transition: all .15s ease !important;
+  transition: all .5s ease !important;
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
